samples/_failures_safe/1761628320_f5503f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4bf2557.c: In function ‘main’:
./samples/SAFE/__tmp_a4bf2557.c:171:16: error: missing terminating " character
  171 |         printf(", Value:
      |                ^~~~~~~~~
./samples/SAFE/__tmp_a4bf2557.c:171:9: error: expected expression at end of input
  171 |         printf(", Value:
      |         ^~~~~~
./samples/SAFE/__tmp_a4bf2557.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a4bf2557.c:171:9: error: expected declaration or statement at end of input
